# nemos_dream

./: .env.example  .gitignore  CLAUDE.md  Demo_Example.html  README.md  draft_plan.md  pyproject.toml
.claude/docs/: architecture.md  conventions.md  datasets.md  nvidia-stack.md  stage-contracts.md  stage-owner-guide.md
configs/: pipeline.yaml
configs/stage1/: cultural_map.yaml  cultural_map_seed.json  decompose.yaml
configs/stage2/: laughter_map.json  rewrite.yaml  translate_rewrite.yaml
configs/stage3/: filter.yaml
configs/stage4/: report.yaml
data/reports/: case_viewer.html  cultural_ref_report.html  distribution_shift.html  distribution_shift_metrics.json  example_sft.json
data/stage1/: example.jsonl  example_input.jsonl  example_output.jsonl
data/stage2/: example.jsonl  example_output.jsonl  out.jsonl  sample_v3.jsonl  stage2_rewrite.jsonl
data/stage3/: accepted.jsonl  dataset_metrics.json  rejected.jsonl  retry_queue.jsonl
scripts/: run_pipeline.py  run_stage.py
scripts/slurm/: install.sbatch  run_stage1.sbatch  run_stage2.sbatch  run_stage3.sbatch  run_stage4.sbatch
src/nemos_dream/: __init__.py  _proxy_patch.py  io_utils.py  nvidia_clients.py  proxy_patch.py  schemas.py
tests/: conftest.py  test_schemas.py
tests/fixtures/: sample_rows.py
tests/stage1/: test_cultural_map.py  test_decompose.py
tests/stage2/: test_markers.py  test_rewrite.py
tests/stage3/: synthesize_stage2_sample.py  test_dataset_metrics.py  test_judges.py  test_phase1_dedup.py  test_phase2_rules.py  test_phase3_guardrails.py  test_phase4_semantic.py  test_rules.py  (+3 more)
(+74 files in other folders)
