[project]
name = "nemos-dream"
version = "0.1.0"
description = "EN→KR cultural SDG pipeline for NVIDIA Nemotron Hackathon Track C."
requires-python = ">=3.11"
authors = [
    { name = "SKT / nemos_dream team" },
]
readme = "README.md"

dependencies = [
    "pydantic>=2.6",
    "openai>=1.40",
    "python-dotenv",
    "pyyaml",
    "tqdm",
    "numpy",
    "pandas>=2.0",
]

[project.optional-dependencies]
stage1 = [
    "data-designer",
    "nvidia-nat[langchain]",
    "tavily-python",
]
stage2 = [
    "datasets",
]
stage3 = [
    "hydra-core>=1.3",
    "nemo-curator>=1.1.0",
    "datasketch>=1.6",
    "presidio-analyzer>=2.2",
    "langchain-nvidia-ai-endpoints>=0.3",
    "langchain-core>=0.3",
    "sentencepiece>=0.2",
    "ftfy>=6.3",
]
stage4 = [
    "matplotlib",
    "plotly",
    "jinja2",
    "rich",
]
all = ["nemos-dream[stage1,stage2,stage3,stage4]"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nemos_dream"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
